--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   width: 100%;
