--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -75,6 +75,7 @@
 
 @media screen and (max-width: 544px) {
   .profile {
+    margin-top: 42px;
     flex-direction: column;
     align-items: center;
   }
