--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,10 +1,10 @@
 .page {
+  margin: auto;
   padding: 45px 0 60px;
   width: 100%;
   max-width: 880px;
   display: flex;
   flex-direction: column;
-  justify-self: center;
   font-family: 'Inter';
   font-size: 16px;
   font-weight: 400;
