--- a/blocks/element.css
+++ b/blocks/element.css
@@ -1,4 +1,5 @@
 .element {
+  position: relative;
   background-color: #fff;
   border-radius: 10px;
   color: #000;
@@ -13,6 +14,19 @@
   object-fit: cover;
   object-position: center;
   border-radius: 10px 10px 0 0;
+}
+
+.element__trash {
+  position: absolute;
+  top: 18px;
+  right: 15px;
+  width: 18px;
+  height: 19.3px;
+  cursor: pointer;
+}
+
+.element__trash:hover {
+  opacity: .6;
 }
 
 .element__info {
