--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -8,6 +8,9 @@
   width: 100%;
   height: 100%;
   background-color: #0008;
+  font-family: 'Inter';
+  font-size: 16px;
+  font-weight: 400;
 }
 
 .popup_open{
@@ -39,6 +42,7 @@
   font-size: 14px;
   border: none;
   border-bottom: 1px solid #C4C4C4;
+  line-height: 1;
 }
 
 .popup__input::placeholder {
