--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -24,7 +24,7 @@
   gap: 10px;
 }
 
-.popup__container {
+.popup__form {
   position: relative;
   padding: 34px 36px 0;
   display: flex;
@@ -60,7 +60,7 @@
   margin-top: 30px;
 }
 
-.popup__submit-button {
+.popup__button {
   margin-top: 48px;
   padding: 16px 0;
   font-size: 18px;
@@ -71,18 +71,18 @@
   cursor: pointer;
 }
 
-.popup__submit-button:hover {
+.popup__button:hover {
   opacity: .8;
 }
 
-.popup__submit-button_disabled {
+.popup__button_disabled {
   background-color: transparent;
   border: 1px solid #C4C4C4;
   color: #C4C4C4;
   cursor: default;
 }
 
-.popup__submit-button_disabled:hover {
+.popup__button_disabled:hover {
   opacity: 1;
 }
 
@@ -110,7 +110,7 @@
 
 
 @media screen and (max-width: 544px) {
-  .popup__container {
+  .popup__form {
     margin: 0 19px;
     padding: 25px 22px;
     height: 322px;
