--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -38,26 +38,53 @@
 }
 
 .popup__title {
-  margin-bottom: 54px;
+  margin-bottom: 44px;
   font-size: 24px;
   font-weight: 900;
   line-height: 1;
 }
 
+.popup__field {
+  position: relative;
+  width: 100%;
+}
+
 .popup__input {
   padding: 0 0 13px;
+  width: 100%;
   font-size: 14px;
   border: none;
   border-bottom: 1px solid #C4C4C4;
   line-height: 1;
 }
 
+.popup__error {
+  width: 100%;
+  max-height: 28px;
+  font-size: 12px;
+  color: red;
+  opacity: 0;
+  position: absolute;
+  top: calc(100% + 3px);
+  left: 0;
+  transition: 0.3s;
+  overflow: hidden;
+}
+
+.popup__error_visible {
+  opacity: 1;
+}
+
+.popup__input_type_error {
+  border-bottom-color: red;
+}
+
 .popup__input::placeholder {
   color: #C4C4C4;
 }
 
-.popup__input:last-of-type {
-  margin-top: 30px;
+.popup__field:last-of-type {
+  margin-top: 34px;
 }
 
 .popup__button {
