--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -5,12 +5,34 @@
   column-gap: 30px;
 }
 
+.profile__image-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .profile__image {
+  display: block;
   width: 120px;
   aspect-ratio: 1 / 1;
   border-radius: 50%;
   object-fit: cover;
   object-position: center;
+}
+
+.profile__edit-image {
+  display: none;
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background: url('../images/Edit_Profile_Picture.svg') no-repeat center;
+  background-color: #00000088;
+}
+
+.profile__image:hover + .profile__edit-image, .profile__edit-image:hover {
+  display: block;
+  cursor: pointer;
 }
 
 .profile__info {
